aey677: Fix content page width with "discussion" xblock, fix course navigation on mobile

--- a/lms/static/sass/partials/lms/theme/custom/_variables.scss
+++ b/lms/static/sass/partials/lms/theme/custom/_variables.scss
@@ -83,7 +83,7 @@ $body-bg: #f5f5f5;
 $border-radius: 5px;
 $black: #000;
 $blue: #0075b4;
-$grey: #ccc;
+$gray: #ccc;
 $light-gray: #ddd;
 $light-gray2: #efefef;
 
